--- a/skyfolk/templates/account/shared_publication.html
+++ b/skyfolk/templates/account/shared_publication.html
@@ -19,17 +19,19 @@
 {% comment %} Para publicaciones que contienen citas {% endcomment %}
 <blockquote class="z-depth-2">
     <div class="row info-publication">
-        <div class="chip">
-            {% avatar shared_publication.author 60 %}
-            <a href="{% url 'user_profile:profile' shared_publication.author %}">@{{ shared_publication.author }}</a>
+        <div class="col s12">
+            <div class="chip">
+                {% avatar shared_publication.author 60 %}
+                <a href="{% url 'user_profile:profile' shared_publication.author %}">@{{ shared_publication.author }}</a>
+            </div>
+            <br><br>
+            <p class="blue-text">{{ shared_publication.created|naturaltime }}</p>
         </div>
-        <a class="white-text blue right btn"
-        href="/publication/{{ shared_publication.pk }}">Ver</a>
     </div>
     <br/>
     <div class="row">
         <div class="col s12">
-            <p><i class="blue-text text-darken-2"> {{ shared_publication.created|naturaltime }}:</i> {{ shared_publication.content|safe }}</p>
+            <p>{{ shared_publication.content|safe }}</p>
         </div>
         <div class="col s12">
             {% with shared_publication.images.all as images %}
@@ -90,6 +92,11 @@
         {% endif %}
         {% endif %}
     </div>
+</div>
+<div class="row">
+    <div class="divider"></div>
+    <a class="white-text blue right btn"
+    href="/publication/{{ shared_publication.pk }}">Ver</a>
 </div>
 </blockquote>
 {% endif %}
