--- a/skyfolk/templates/groups/board_theme.html
+++ b/skyfolk/templates/groups/board_theme.html
@@ -92,8 +92,8 @@
             {% include "groups/board_theme_publications.html" %}
         </div>
         {% if publications.has_next %}
-            <a class="infinite-more-link waves-effect waves-light btn-large blue darken-1 white-text center"
-               href="?page={{ publications.next_page_number }}">More</a>
+            <a class="infinite-more-link hidden"
+               href="?page={{ publications.next_page_number }}"></a>
         {% endif %}
         <div class="progress loading_board_theme" style="display: none">
             <div class="indeterminate blue darken-1"></div>
