--- a/skyfolk/static/sass/news.sass
+++ b/skyfolk/static/sass/news.sass
@@ -29,6 +29,7 @@ html, body
     & .contenido
       padding-left: 10px
       display: block
+      word-wrap: break-word
       > p
         > img
           width: 20px
