--- a/skyfolk/static/sass/profile.sass
+++ b/skyfolk/static/sass/profile.sass
@@ -145,7 +145,6 @@ $followcolor: #64b5f6
 /* Posicionamiento default */
 .caja
   width: 90px
-  cursor: pointer
   position: absolute
   left: 0
   right: 29px
@@ -1621,3 +1620,7 @@ span
 .placeholder .plugin iframe
   width: 100%
   min-height: 300px
+  max-height: 350px
+
+.placeholder .material-placeholder
+  max-height: 350px
