--- a/skyfolk/templates/account/like_entries.html
+++ b/skyfolk/templates/account/like_entries.html
@@ -7,15 +7,15 @@
             <div class="row">
                 <div class="col s12">
                     <div class="header">
-                        {% if item.profile.back_image %}
-                            <img class="back-profile-user" src="{{ item.profile.back_image.url }}">
+                        {% if item.from_profile.back_image %}
+                            <img class="back-profile-user" src="{{ item.from_profile.back_image.url }}">
                         {% else %}
                             <img class="back-profile-user" src="{% static "img/nuevo_back.png" %}">
                         {% endif %}
                         <i class="material-icons like-him">favorite</i>
                         <div class="bg-user">
-                            <div onclick="location.href='/profile/{{ item.username }}'"
-                                 class="profile-user-bg">{% avatar item %}</div>
+                            <div onclick="location.href='/profile/{{ item.from_profile.user.username }}'"
+                                 class="profile-user-bg">{% avatar item.from_profile.user %}</div>
                         </div>
                     </div>
                 </div>
@@ -23,8 +23,8 @@
             <div class="row">
                 <div class="col s12">
                     <div class="name-friend">
-                        <a href="/profile/{{ item.username }}">@{{ item.username }} </a><br><br>
-                        <p>{{ item.first_name }} {{ item.last_name }}</p>
+                        <a href="/profile/{{ item.from_profile.user.username }}">@{{ item.from_profile.user.username }} </a><br><br>
+                        <p>{{ item.from_profile.user.first_name }} {{ item.from_profile.user.last_name }}</p>
                     </div>
                 </div>
             </div>
