+ Mejora en el front (SKYF-147, SKYF-151, SKYF-167, SKYF-172

--- a/dash/contrib/plugins/image/templates/image/render.html
+++ b/dash/contrib/plugins/image/templates/image/render.html
@@ -9,7 +9,7 @@
             </div>
             <div class="center">
                 {% if image.image  %}
-                        <img src="{{ image.image.url }}" alt="{{ plugin.data.title }}" class="materialboxed lazyloaded" width="100%" height="100%"/>
+                        <img src="{{ image.image.url }}" alt="{{ plugin.data.title }}" class="materialboxed lazyloaded" />
                 {% else %}
                     {% trans "No image provided!" %}
                 {% endif %}
