--- a/photologue/templates/photologue/videos/publication_detail.html
+++ b/photologue/templates/photologue/videos/publication_detail.html
@@ -118,7 +118,7 @@
                                                 <p>{{ node.publication_video_extra_content.description }}</p>
                                             </div>
                                             <div class="card-action">
-                                                <a href="{{ node.publication_video_extra_content.url }}">Ver</a>
+                                                <a class="white-text blue right btn right" href="{{ node.publication_video_extra_content.url }}">Ver</a>
                                             </div>
                                         </div>
                                         {% endif %}
