--- a/photologue_groups/templates/photologue_groups/videos/new_reply.html
+++ b/photologue_groups/templates/photologue_groups/videos/new_reply.html
@@ -14,7 +14,7 @@
                         <label for="message-reply-{{ node.pk }}">Escribe tu mensaje aqui...</label>
                     </div>
                     <div class="file-field input-field col s12">
-                        <div class="btn">
+                        <div class="btn white-text blue">
                             <span>Imágenes</span>
                             <input name="image" type="file" multiple>
                         </div>
