--- a/skyfolk/templates/account/new_reply.html
+++ b/skyfolk/templates/account/new_reply.html
@@ -16,7 +16,7 @@ Nueva respuesta a una publicacion
                         <label for="message-reply-{{ node.pk }}">Escribe tu mensaje aqui...</label>
                     </div>
                     <div class="file-field input-field col s12">
-                        <div class="btn">
+                        <div class="white-text blue btn">
                             <span>Imágenes</span>
                             <input name="image" type="file" multiple>
                         </div>
