--- a/skyfolk/templates/account/shared_publication.html
+++ b/skyfolk/templates/account/shared_publication.html
@@ -86,7 +86,7 @@
                 <p>{{ shared_publication.extra_content.description }}.</p>
             </div>
             <div class="card-action">
-                <a href="{{ shared_publication.extra_content.url }}">Ver</a>
+                <a class="white-text blue right btn right" href="{{ shared_publication.extra_content.url }}">Ver</a>
             </div>
         </div>
         {% endif %}
