--- a/skyfolk/templates/channels/new_publication_detail.html
+++ b/skyfolk/templates/channels/new_publication_detail.html
@@ -100,14 +100,14 @@
                                         <p>{{ node.shared_publication.extra_content.description }}.</p>
                                     </div>
                                     <div class="card-action">
-                                        <a href="{{ node.shared_publication.extra_content.url }}">Ver</a>
+                                        <a class="white-text blue right btn right" href="{{ node.shared_publication.extra_content.url }}">Ver</a>
                                     </div>
                                 </div>
                                 {% endif %}
                                 {% endif %}
                             </div>
                             <div class="card-action">
-                                <a class="blue-text text-darken-2"
+                                <a class="white-text blue right btn right"
                                 href="/publication/{{ node.shared_publication.pk }}">Ver</a>
                             </div>
                         </div>
@@ -157,7 +157,7 @@
                                     <p>{{ node.extra_content.description }}</p>
                                 </div>
                                 <div class="card-action">
-                                    <a href="{{ node.extra_content.url }}">Ver</a>
+                                    <a class="white-text blue right btn right" href="{{ node.extra_content.url }}">Ver</a>
                                 </div>
                             </div>
                             {% endif %}
