--- a/skyfolk/templates/groups/board_theme_publications.html
+++ b/skyfolk/templates/groups/board_theme_publications.html
@@ -87,7 +87,7 @@
                                                     <p>{{ pub.theme_extra_content.description }}</p>
                                                 </div>
                                                 <div class="card-action">
-                                                    <a href="{{ pub.theme_extra_content.url }}">Ver</a>
+                                                    <a class="white-text blue right btn right" href="{{ pub.theme_extra_content.url }}">Ver</a>
                                                 </div>
                                             </div>
                                         {% endif %}
