--- a/skyfolk/templates/search/search.html
+++ b/skyfolk/templates/search/search.html
@@ -198,7 +198,7 @@ Template para las busquedas
                                                         <p>{{ item.object.extra_content.description }}</p>
                                                     </div>
                                                     <div class="card-action">
-                                                        <a href="{{ item.object.extra_content.url }}">Ver</a>
+                                                        <a class="white-text blue right btn right" href="{{ item.object.extra_content.url }}">Ver</a>
                                                     </div>
                                                 </div>
                                             {% endif %}
@@ -421,14 +421,14 @@ Template para las busquedas
                                                                         <p>{{ node.shared_publication.extra_content.description }}.</p>
                                                                     </div>
                                                                     <div class="card-action">
-                                                                        <a href="{{ node.shared_publication.extra_content.url }}">Ver</a>
+                                                                        <a class="white-text blue right btn right" href="{{ node.shared_publication.extra_content.url }}">Ver</a>
                                                                     </div>
                                                                 </div>
                                                             {% endif %}
                                                         {% endif %}
                                                     </div>
                                                     <div class="card-action">
-                                                        <a class="blue-text text-darken-2"
+                                                        <a class="white-text blue right btn right"
                                                            href="/publication/{{ node.shared_publication.pk }}">Ver</a>
                                                     </div>
                                                 </div>
@@ -501,14 +501,14 @@ Template para las busquedas
                                                                         <p>{{ item.object.shared_group_publication.extra_content.description }}.</p>
                                                                     </div>
                                                                     <div class="card-action">
-                                                                        <a href="{{ item.object.shared_group_publication.extra_content.url }}">Ver</a>
+                                                                        <a class="white-text blue right btn right" href="{{ item.object.shared_group_publication.extra_content.url }}">Ver</a>
                                                                     </div>
                                                                 </div>
                                                             {% endif %}
                                                         {% endif %}
                                                     </div>
                                                     <div class="card-action">
-                                                        <a class="blue-text text-darken-2"
+                                                        <a class="white-text blue right btn right"
                                                            href="{% url "publications_groups:detail_group_publication" pk=item.object.shared_group_publication.pk %}">Ver</a>
                                                     </div>
                                                 </div>
@@ -550,7 +550,7 @@ Template para las busquedas
                                                         <p>{{ item.object.extra_content.description }}</p>
                                                     </div>
                                                     <div class="card-action">
-                                                        <a href="{{ item.object.extra_content.url }}">Ver</a>
+                                                        <a class="white-text blue right btn right" href="{{ item.object.extra_content.url }}">Ver</a>
                                                     </div>
                                                 </div>
                                             {% endif %}
