--- a/photologue_groups/templates/photologue_groups/videos/ajax_load_replies.html
+++ b/photologue_groups/templates/photologue_groups/videos/ajax_load_replies.html
@@ -94,7 +94,7 @@
                                 <p>{{ node.publication_group_multimedia_video_extra_content.description }}</p>
                             </div>
                             <div class="card-action">
-                                <a href="{{ node.publication_group_multimedia_video_extra_content.url }}">Ver</a>
+                                <a class="white-text blue right btn right" href="{{ node.publication_group_multimedia_video_extra_content.url }}">Ver</a>
                             </div>
                         </div>
                         {% endif %}
