--- a/skyfolk/static/sass/profile.sass
+++ b/skyfolk/static/sass/profile.sass
@@ -1624,3 +1624,11 @@ span
 
 .placeholder .material-placeholder
   max-height: 350px
+  > img
+    margin: auto
+
+.card.small .card-image
+  height: 60%
+  > img
+    max-height: 100%
+    object-fit: cover
