--- a/skyfolk/templates/account/ajax_load_replies.html
+++ b/skyfolk/templates/account/ajax_load_replies.html
@@ -105,7 +105,7 @@
                                                     <p>{{ node.extra_content.description }}</p>
                                                 </div>
                                                 <div class="card-action">
-                                                    <a href="{{ node.extra_content.url }}">Ver</a>
+                                                    <a class="white-text blue right btn right" href="{{ node.extra_content.url }}">Ver</a>
                                                 </div>
                                             </div>
                                         {% endif %}
