--- a/skyfolk/templates/account/profile_comments.html
+++ b/skyfolk/templates/account/profile_comments.html
@@ -91,15 +91,14 @@
                                                 {% comment %} Para publicaciones con URL {% endcomment %}
                                                 <div class="card small">
                                                     <div class="card-image">
-                                                        <img class="lazyload" data-src="
-                                                                {% if node.extra_content.image %}{{ node.extra_content.image }}{% else %}{% static "dist/img/nuevo_back.png" %}{% endif %}">
+                                                        <img class="lazyload" data-src="{% if node.extra_content.image %}{{ node.extra_content.image }}{% else %}{% static "dist/img/nuevo_back.png" %}{% endif %}">
                                                         <span class="card-title white-text">{{ node.extra_content.title }}</span>
                                                     </div>
                                                     <div class="card-content">
                                                         <p>{{ node.extra_content.description }}</p>
                                                     </div>
                                                     <div class="card-action">
-                                                        <a href="{{ node.extra_content.url }}">Ver</a>
+                                                        <a class="white-text blue right btn right" href="{{ node.extra_content.url }}">Ver</a>
                                                     </div>
                                                 </div>
                                             {% endif %}
