--- a/skyfolk/templates/channels/new_photo_publication.html
+++ b/skyfolk/templates/channels/new_photo_publication.html
@@ -88,7 +88,7 @@
                                 <p>{{ node.publication_photo_extra_content.description }}</p>
                             </div>
                             <div class="card-action">
-                                <a href="{{ node.publication_photo_extra_content.url }}">Ver</a>
+                                <a class="white-text blue right btn right" href="{{ node.publication_photo_extra_content.url }}">Ver</a>
                             </div>
                         </div>
                         {% endif %}
