--- a/skyfolk/templates/groups/comentarios_entries.html
+++ b/skyfolk/templates/groups/comentarios_entries.html
@@ -97,7 +97,7 @@
                                                         <p>{{ node.extra_content.description }}</p>
                                                     </div>
                                                     <div class="card-action">
-                                                        <a href="{{ node.extra_content.url }}">Ver</a>
+                                                        <a class="white-text blue right btn right" href="{{ node.extra_content.url }}">Ver</a>
                                                     </div>
                                                 </div>
                                             {% endif %}
