--- a/skyfolk/templates/groups/new_reply_theme_publication.html
+++ b/skyfolk/templates/groups/new_reply_theme_publication.html
@@ -15,7 +15,7 @@ Nueva respuesta a una publicacion
                         <label for="message-reply-{{ pub.author }}">Escribe tu mensaje aqui...</label>
                     </div>
                     <div class="file-field input-field col s12">
-                        <div class="btn">
+                        <div class="btn white-text blue">
                             <span>Imágenes</span>
                             <input name="image" type="file" multiple>
                         </div>
