+ Mejora de aspecto para hotkeys (SKYF-146)

--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -178,8 +178,8 @@ Base para la interfaz en comun de todos los usuarios.
     <!-- Atajos del usuario -->
     <div class="default-div" id="atajos-keyboard-profile">
         <table class="responsive-table highlight modal-table" summary="Atajos para acciones comunes.">
-            <caption class="hide-on-med-and-down atajos-title">
-                <p>Atajos de teclado</p>
+            <caption class="atajos-title">
+                <p class="hide-on-med-and-down">Atajos de teclado</p>
                 <i class="material-icons close-shortcuts">close</i>
             </caption>
             <thead>
